src/test/ui/existential_types/no_inferrable_concrete_type.stderr
error[E0391]: cycle detected when processing `Foo`
  --> $DIR/no_inferrable_concrete_type.rs:6:1
   |
LL | existential type Foo: Copy; //~ cycle detected
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires processing `bar`...
  --> $DIR/no_inferrable_concrete_type.rs:9:23
   |
LL | fn bar(x: Foo) -> Foo { x }
   |                       ^^^^^
   = note: ...which again requires processing `Foo`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
